// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

<div
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</div>
`;

exports[`composition hook should return with Paragraph props 1`] = `
Object {
  "className": "css-bimuxi css-1pwrqjj css-1ccgglo",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

<div
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

<p
  class="emotion-0 emotion-1 emotion-2 test"
>
  hello world
</p>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

<p
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</p>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-2.emotion-2.emotion-2 {
  color: #3722ed;
}

<p
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</p>
`;

exports[`theming Paragraph.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 {
  background-color: red;
}

<p
  class="emotion-0 emotion-1 emotion-2"
>
  hello world
</p>
`;
